syntax = "proto3";

package flightTracking;

message Flight {
  string flight_id = 1;
  string flight_number = 2;
  string airline_name = 3;
  string departure_airport = 4;
  string arrival_airport = 5;
}

service FlightTracking {
  rpc GetFlight(FlightRequest) returns (Flight);
}

message FlightRequest {
  string flight_id = 1;
}